--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
     <link rel = "stylesheet" href = "main.css">
 </head>
 <body>
-
+<div class = "container">
 <h1> SUCSA </h1>
-
+<!--<img class = "img" src = "logo.jpg" alt = "image">-->
 
 <div class = "nav">
     <a class = "active" href = "main.html">主页</a>
@@ -19,13 +19,13 @@
     <a href = "about.html">关于学联</a>
     <a href = "contact.html">联系方式</a>
 </div>
+</div>
 
-<p> asdvasfvwaqrevaswrvewqarvqwasvewarvqwvqwav</p>
-<p class = "normal-text"> avasrvadvawrvawdfvawrvsdvcd</p>
 
 <div class = "footer">
     <p> SUCSA </p>
     <p> phone number:xxxxxxx</p>
+<!--    <img class = "img" src = "logo.jpg" alt = "image">-->
 </div>
 </body>
 </html>
