--- a/about.html
+++ b/about.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-<h1> SUCSA </h1>
+<div class = "bg"></div>
+<div class = "header">
+    <h1> SUCSA </h1>
+</div>
+<div class = "container">
 <div class = "nav">
     <a href = "main.html">主页</a>
     <a href = "event.html">活动</a>
@@ -17,9 +21,9 @@
     <a class = "active" href = "about.html">关于学联</a>
     <a href = "contact.html">联系方式</a>
 </div>
+</div>
 
-<p> asdvasfvwaqrevaswrvewqarvqwasvewarvqwvqwav</p>
-<p class = "normal-text"> avasrvadvawrvawdfvawrvsdvcd</p>
+
 
 <div class = "footer">
     <p> SUCSA </p>
