--- a/main.html
+++ b/main.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>SUCSA</title>
     <link rel = "stylesheet" href = "main.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<div class = "bg"></div>
+<div class = "header">
+    <h1> SUCSA </h1>
+</div>
 <div class = "container">
-<h1> SUCSA </h1>
+
 <!--<img class = "img" src = "logo.jpg" alt = "image">-->
 
 <div class = "nav">
