--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title> 联系方式 </title>
     <link rel="stylesheet" href = "main.css">
+    <link rel = "stylesheet" href = "navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class = "bg"></div>
@@ -13,7 +15,7 @@
 </div>
 
 <div class = "container">
-<div class = "nav">
+<div class = "nav" id = "topNav">
     <a href = "main.html">主页</a>
     <a href = "event.html">活动</a>
     <a href = "joinsucsa.html">加入学联</a>
@@ -21,9 +23,22 @@
     <a href = "cooperation.html">合作方</a>
     <a href = "about.html">关于学联</a>
     <a class = "active" href = "contact.html">联系方式</a>
+    <a href="javascript:void(0);" class="icon" onclick="navFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
 </div>
 </div>
 
+<script>
+    function navFunction() {
+        var x = document.getElementById("topNav");
+        if (x.className === "nav") {
+            x.className += " responsive";
+        } else {
+            x.className = "nav";
+        }
+    }
+</script>
 
 
 <div class = "footer">
