--- a/event.html
+++ b/event.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <title>Event</title>
     <link rel="stylesheet" href = "main.css">
-    <link rel="stylesheet" href = "slide_show.css">
+    <link rel="stylesheet" href = "event.css">
+    <link rel = "stylesheet" href = "navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-<div class = "bg"></div>
+<!--<div class = "bg"></div>-->
 <div class = "header">
     <h1> SUCSA </h1>
 </div>
 
 <div class = "container">
-<div class = "nav">
+<div class = "nav" id = "topNav">
     <a href = "main.html">主页</a>
     <a class = "active" href = "event.html">活动</a>
     <a href = "joinsucsa.html">加入学联</a>
@@ -22,7 +24,26 @@
     <a href = "cooperation.html">合作方</a>
     <a href = "about.html">关于学联</a>
     <a href = "contact.html">联系方式</a>
+    <a href="javascript:void(0);" class="icon" onclick="navFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
 </div>
+</div>
+
+<script>
+    function navFunction() {
+        var x = document.getElementById("topNav");
+        if (x.className === "nav") {
+            x.className += " responsive";
+        } else {
+            x.className = "nav";
+        }
+    }
+</script>
+
+
+<div class = "head">
+    <h1>最近活动</h1>
 </div>
 
 <div class = "slide-show">
@@ -33,13 +54,13 @@
     </div>
 
     <div class = "slides">
-        <div class = "text">2/3</div>
+        <div class = "number">2/3</div>
         <img src = "images/2.png" style="width:100%">
         <div class = "text"> caption text</div>
     </div>
 
     <div class = "slides">
-        <div class = "text">3/3</div>
+        <div class = "number">3/3</div>
         <img src = "images/3.png" style="width:100%">
         <div class = "text"> caption text</div>
     </div>
@@ -77,7 +98,9 @@
     }
 </script>
 
+<div class = "previous">
 
+</div>
 
 
 <div class = "footer">
